# rag

./: .dockerignore  .gitignore  README.md  create_db.py  docker-compose.yml  pyproject.toml  rag_app.db
backend/: Dockerfile  chroma_utils.py  db_utils.py  langchain_utils.py  main.py  pydantic_models.py  rag_app.db
backend/chroma_db/: chroma.sqlite3
chroma_db/: chroma.sqlite3
frontend/: Dockerfile
notebook/: LangChain_Conversational_RAG_Crash_Course_From_Basics_to_Production_Part_1.ipynb
