[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langchain-pinecone>=0.2.11",
    "numpy>=2.3.2",
    "pinecone>=7.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pypdf>=5.9.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
]
